# trt-infer-example-cpp

./: CMakeLists.txt  README.md  logger.hpp  main.cpp  ort_infer.py  trt_infer.cpp
